# Translitiration

./: CMakeLists.txt  README.md  Tests.cpp  main.cpp
src/: lib.cpp  lib.h
